CCD-5849 only lower case term - no need for additional IN case.